@@ -1,3 +1,8 @@
+2008-03-26  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* help-fns.el (describe-function-1, describe-variable): If no
+	replacement is provided, don't print "use nil instead".
+
 2008-03-25  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>
 
 	* proced.el: Update copyright.
